--- a/index.html
+++ b/index.html
@@ -939,7 +939,8 @@
         </nav>
         <div class="sidebar-actions">
           <button class="sidebar-actions__location">
-            <img src="./assets/icons/location.svg" alt="location" />
+            <img src="./assets/icons/location.svg" alt="location" /> 
+            Астана
           </button>
         </div>
       </div>
