--- a/index.html
+++ b/index.html
@@ -110,41 +110,75 @@
     <main class="section section__main">
       <section class="section">
         <div class="slider">
-          <div class="slider__track">
-            <div class="slider__item">
-              <img
-                class="slider__image"
-                src="./assets/images/main_slider_1.webp"
-                alt="Slider item"
-              />
-            </div>
-            <div class="slider__item">
-              <img
-                class="slider__image"
-                src="./assets/images/banner_2.webp"
-                alt="Slider item"
-              />
-              <div class="slider__content">
-                <h1 class="slider__title">
-                  Astana Pass - ключ к достопримечательностям города
-                </h1>
-                <p class="slider__text">
-                  Это карта гостя, которая открывает город в новых красках,
-                  делая город еще более привлекательным для посетителей.
-                  Свободный вход в достопримечательности и музеи, а также
-                  возможность посетить интересные городские и загородные
-                  экскурсии.
-                </p>
-                <a href="#" class="visit visit--black">Хочу посетить</a>
+          <div class="slider__wrapper">
+            <div class="slider__track">
+              <div class="slider__item">
+                <img
+                  class="slider__image"
+                  src="./assets/images/main_slider_1.webp"
+                  alt="Slider item"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  class="slider__image"
+                  src="./assets/images/banner_2.webp"
+                  alt="Slider item"
+                />
+                <div class="slider__content">
+                  <h1 class="slider__title">
+                    Astana Pass - ключ к достопримечательностям города
+                  </h1>
+                  <p class="slider__text">
+                    Это карта гостя, которая открывает город в новых красках,
+                    делая город еще более привлекательным для посетителей.
+                    Свободный вход в достопримечательности и музеи, а также
+                    возможность посетить интересные городские и загородные
+                    экскурсии.
+                  </p>
+                  <a href="#" class="visit visit--black">Хочу посетить</a>
+                </div>
               </div>
             </div>
           </div>
           <!-- Кнопки навигации -->
           <button class="slider__nav slider__nav--prev" type="button">
-            &lt;
+            <svg
+              width="9"
+              height="18"
+              viewBox="0 0 9 18"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="arrow-icon"
+            >
+              <path
+                d="M8.05 16.92L1.53 10.4C0.760002 9.62999 0.760002 8.36999 1.53 7.59999L8.05 1.07999"
+                stroke="currentColor"
+                stroke-width="1.5"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
           </button>
           <button class="slider__nav slider__nav--next" type="button">
-            &gt;
+            <svg
+              width="9"
+              height="18"
+              viewBox="0 0 9 18"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="arrow-icon arrow-icon--next"
+            >
+              <path
+                d="M8.05 16.92L1.53 10.4C0.760002 9.62999 0.760002 8.36999 1.53 7.59999L8.05 1.07999"
+                stroke="currentColor"
+                stroke-width="1.5"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
           </button>
         </div>
       </section>
@@ -310,7 +344,7 @@
               <div class="popular__content">
                 <div class="popular__item-status">
                   <img src="./assets/icons/top-arrow.svg" alt="On top" />
-                  <img src="./assets/icons/free-button 1.png" alt="Free" />
+                  <img src="./assets/icons/free-button_1.png" alt="Free" />
                 </div>
                 <a href="#" class="details details__link--blue">Подробнее</a>
               </div>
@@ -331,7 +365,7 @@
               <div class="popular__content">
                 <div class="popular__item-status">
                   <img src="./assets/icons/top-arrow.svg" alt="On top" />
-                  <img src="./assets/icons/free-button 1.png" alt="Free" />
+                  <img src="./assets/icons/free-button_1.png" alt="Free" />
                 </div>
                 <a href="#" class="details details__link--blue">Подробнее</a>
               </div>
@@ -352,7 +386,7 @@
               <div class="popular__content">
                 <div class="popular__item-status">
                   <img src="./assets/icons/top-arrow.svg" alt="On top" />
-                  <img src="./assets/icons/free-button 1.png" alt="Free" />
+                  <img src="./assets/icons/free-button_1.png" alt="Free" />
                 </div>
                 <a href="#" class="details details__link--blue">Подробнее</a>
               </div>
@@ -373,7 +407,7 @@
               <div class="popular__content">
                 <div class="popular__item-status">
                   <img src="./assets/icons/top-arrow.svg" alt="On top" />
-                  <img src="./assets/icons/free-button 1.png" alt="Free" />
+                  <img src="./assets/icons/free-button_1.png" alt="Free" />
                 </div>
                 <a href="#" class="details details__link--blue">Подробнее</a>
               </div>
@@ -394,99 +428,142 @@
             </div>
             <a href="#" class="see-all-link">Смотреть всё</a>
           </div>
+
           <div class="slider slider--multi slider--finite">
-            <div class="slider__track">
-              <div class="slider__item slider__item--small">
-                <div class="article">
-                  <img
-                    src="./assets/images/magazine_1.webp"
-                    alt="Dubai"
-                    class="article__image"
-                  />
-                  <div class="article__content">
-                    <span class="article__date">16.02.2023</span>
-                    <h3 class="article__title">
-                      Назван топ-10 направлений для туризма по версии
-                      TripAdvisor
-                    </h3>
-                    <p class="article__text">
-                      Сайт путешествий TripAdvisor составил рейтинг Travellers’
-                      Choice Awards (“Выбор туристов”), в котором собрал
-                      наиболее ...
-                    </p>
+            <div class="slider__wrapper">
+              <div class="slider__track">
+                <div class="slider__item slider__item--small">
+                  <div class="article">
+                    <img
+                      src="./assets/images/magazine_1.webp"
+                      alt="Dubai"
+                      class="article__image"
+                    />
+                    <div class="article__content">
+                      <span class="article__date">16.02.2023</span>
+                      <h3 class="article__title">
+                        Назван топ-10 направлений для туризма по версии
+                        TripAdvisor
+                      </h3>
+                      <p class="article__text">
+                        Сайт путешествий TripAdvisor составил рейтинг
+                        Travellers’ Choice Awards (“Выбор туристов”), в котором
+                        собрал наиболее ...
+                      </p>
+                    </div>
+                    <a href="#" class="details details__link--black"
+                      >Подробнее</a
+                    >
                   </div>
-                  <a href="#" class="details details__link--black">Подробнее</a>
                 </div>
-              </div>
-              <div class="slider__item slider__item--small">
-                <div class="article">
-                  <img
-                    src="./assets/images/magazine_2.webp"
-                    alt="hospital place"
-                    class="article__image"
-                  />
-                  <div class="article__content">
-                    <span class="article__date">16.02.2023</span>
-                    <h3 class="article__title">
-                      Названы самые гостеприимные места планеты
-                    </h3>
-                    <p class="article__text">
-                      В путешествиях важны не только новые впечатления, но и
-                      комфортные условия для восстановления после дня...
-                    </p>
+                <div class="slider__item slider__item--small">
+                  <div class="article">
+                    <img
+                      src="./assets/images/magazine_2.webp"
+                      alt="hospital place"
+                      class="article__image"
+                    />
+                    <div class="article__content">
+                      <span class="article__date">16.02.2023</span>
+                      <h3 class="article__title">
+                        Названы самые гостеприимные места планеты
+                      </h3>
+                      <p class="article__text">
+                        В путешествиях важны не только новые впечатления, но и
+                        комфортные условия для восстановления после дня...
+                      </p>
+                    </div>
+                    <a href="#" class="details details__link--black"
+                      >Подробнее</a
+                    >
                   </div>
-                  <a href="#" class="details details__link--black">Подробнее</a>
                 </div>
-              </div>
-              <div class="slider__item slider__item--small">
-                <div class="article">
-                  <img
-                    src="./assets/images/magazine_3.webp"
-                    alt="iceberg"
-                    class="article__image"
-                  />
-                  <div class="article__content">
-                    <span class="article__date">16.02.2023</span>
-                    <h3 class="article__title">
-                      «Удивительный айсберг». В Алматинской области «снова
-                      появился «ледяной вулкан»
-                    </h3>
-                    <p class="article__text">
-                      Казахстанцы делятся новыми красивыми фотографиями из села
-                      Кеген Алматинской области. Место славится...
-                    </p>
+                <div class="slider__item slider__item--small">
+                  <div class="article">
+                    <img
+                      src="./assets/images/magazine_3.webp"
+                      alt="iceberg"
+                      class="article__image"
+                    />
+                    <div class="article__content">
+                      <span class="article__date">16.02.2023</span>
+                      <h3 class="article__title">
+                        «Удивительный айсберг». В Алматинской области «снова
+                        появился «ледяной вулкан»
+                      </h3>
+                      <p class="article__text">
+                        Казахстанцы делятся новыми красивыми фотографиями из
+                        села Кеген Алматинской области. Место славится...
+                      </p>
+                    </div>
+                    <a href="#" class="details details__link--black"
+                      >Подробнее</a
+                    >
                   </div>
-                  <a href="#" class="details details__link--black">Подробнее</a>
                 </div>
-              </div>
-              <div class="slider__item--small">
-                <div class="article">
-                  <img
-                    src="./assets/images/magazine_3.webp"
-                    alt="iceberg"
-                    class="article__image"
-                  />
-                  <div class="article__content">
-                    <span class="article__date">16.02.2023</span>
-                    <h3 class="article__title">
-                      «Удивительный айсберг». В Алматинской области «снова
-                      появился «ледяной вулкан»
-                    </h3>
-                    <p class="article__text">
-                      Казахстанцы делятся новыми красивыми фотографиями из села
-                      Кеген Алматинской области. Место славится...
-                    </p>
+                <div class="slider__item--small">
+                  <div class="article">
+                    <img
+                      src="./assets/images/magazine_3.webp"
+                      alt="iceberg"
+                      class="article__image"
+                    />
+                    <div class="article__content">
+                      <span class="article__date">16.02.2023</span>
+                      <h3 class="article__title">
+                        «Удивительный айсберг». В Алматинской области «снова
+                        появился «ледяной вулкан»
+                      </h3>
+                      <p class="article__text">
+                        Казахстанцы делятся новыми красивыми фотографиями из
+                        села Кеген Алматинской области. Место славится...
+                      </p>
+                    </div>
+                    <a href="#" class="details details__link--black"
+                      >Подробнее</a
+                    >
                   </div>
-                  <a href="#" class="details details__link--black">Подробнее</a>
                 </div>
               </div>
             </div>
             <!-- Кнопки навигации -->
             <button class="slider__nav slider__nav--prev" type="button">
-              &lt;
+              <svg
+                width="9"
+                height="18"
+                viewBox="0 0 9 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon"
+              >
+                <path
+                  d="M8.05 16.92L1.53 10.4C0.760002 9.62999 0.760002 8.36999 1.53 7.59999L8.05 1.07999"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-miterlimit="10"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </button>
             <button class="slider__nav slider__nav--next" type="button">
-              &gt;
+              <svg
+                width="9"
+                height="18"
+                viewBox="0 0 9 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon arrow-icon--next"
+              >
+                <path
+                  d="M8.05 16.92L1.53 10.4C0.760002 9.62999 0.760002 8.36999 1.53 7.59999L8.05 1.07999"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-miterlimit="10"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </button>
           </div>
         </div>
@@ -906,7 +983,7 @@
               class="expanding-search__submit"
               aria-label="Найти"
             >
-            <img src="./assets/icons/search.svg" alt="Search" />
+              <img src="./assets/icons/search.svg" alt="Search" />
             </button>
           </form>
 
@@ -939,7 +1016,7 @@
         </nav>
         <div class="sidebar-actions">
           <button class="sidebar-actions__location">
-            <img src="./assets/icons/location.svg" alt="location" /> 
+            <img src="./assets/icons/location.svg" alt="location" />
             Астана
           </button>
         </div>
